# python-learning-project

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py
01_basics/: README.md  exercises.py
03_oop/: examples.py
04_pythonic/: examples.py
05_advanced/: README.md
06_projects/: README.md
06_projects/file_manager/: README.md  test_file_manager.py
06_projects/sales_analysis/: README.md  analyze.py
06_projects/todo_api/: README.md
down_and_upload/: .gitignore  Dockerfile.txt  README.md  download_and_upload.py  download_video_from_dy.py  requirements.txt
down_and_upload/.github/: copilot-instructions.md
down_and_upload/playwright_userdata/: Last Browser  Local State
down_and_upload/playwright_userdata/Default/: DIPS  Favicons  History  Preferences  Secure Preferences  Top Sites  Web Data
down_and_upload/playwright_userdata/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  (+332 more)
down_and_upload/playwright_userdata/Default/DawnGraphiteCache/: data_1  index
down_and_upload/playwright_userdata/Default/DawnWebGPUCache/: data_1  index
down_and_upload/playwright_userdata/Default/Extension Rules/: LOG
down_and_upload/playwright_userdata/Default/Extension Scripts/: LOG
down_and_upload/playwright_userdata/Default/Extension State/: LOG  LOG.old
down_and_upload/playwright_userdata/Default/GCM Store/: LOG  LOG.old
down_and_upload/playwright_userdata/Default/GPUCache/: data_0  data_1  data_2  index
down_and_upload/playwright_userdata/Default/Network/: Cookies  Network Persistent State  TransportSecurity
down_and_upload/playwright_userdata/Default/Session Storage/: 000003.ldb  000007.ldb  000009.ldb  LOG  LOG.old  MANIFEST-000001
down_and_upload/playwright_userdata/Default/Sessions/: Session_13413096994165296  Session_13413097003858049  Tabs_13413096994226340  Tabs_13413097003913021
down_and_upload/playwright_userdata/Default/Site Characteristics Database/: LOG  LOG.old
down_and_upload/playwright_userdata/Default/WebStorage/: QuotaManager
down_and_upload/playwright_userdata/Default/shared_proto_db/: LOG  LOG.old
down_and_upload/playwright_userdata/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  index
down_and_upload/playwright_userdata/GraphiteDawnCache/: data_1  index
down_and_upload/playwright_userdata/ShaderCache/: data_1  index
down_and_upload/playwright_userdata/segmentation_platform/: ukm_db
down_and_upload/tools/: check_file.py  cookie_header.txt  export_playwright_cookies.py  fix_playwright_cookies.py  inspect_captured.py  login_playwright.py  make_cookie_header.py  test_douyin.py  yt_dlp_with_cookie_header.py
py_learning/: .flake8  .pylintrc  README.md  check_progress.py  setup.py
py_learning/01_basics/: examples.py  exercises.py
py_learning/02_data_structures/: README.md  examples.py  exercises.py
py_learning/03_oop/: README.md
py_learning/04_pythonic/: README.md
py_learning/05_advanced/: examples.py
py_learning/06_projects/file_manager/: file_manager.py
py_learning/06_projects/todo_api/: main.py  requirements.txt  test_api.py
tests/: README.md
(+861 files in other folders)
